setup for scenario runs

--- a/rapid-review.org
+++ b/rapid-review.org
@@ -13,10 +13,14 @@ RAPID REVIEW -*- mode: org -*-
 ** NEXT Disprove existing approaches
    :LOGBOOK:  
    CLOCK: [2019-07-17 Wed 10:21]--[2019-07-17 Wed 17:22] =>  7:01
+   :END:    
+** NEXT Setup test architecture
+   :LOGBOOK:  
+   CLOCK: [2019-07-18 Thu 10:32]--[2019-07-18 Thu 13:57] =>  3:25
    :END:      
-** TODO Setup test architecture
 ** NEXT get test data
    :LOGBOOK:  
-   CLOCK: [2019-07-18 Thu 10:23]
+   CLOCK: [2019-07-18 Thu 13:57]--[2019-07-18 Thu 17:36] =>  3:39
+   CLOCK: [2019-07-18 Thu 10:23]--[2019-07-18 Thu 10:32] =>  0:09
    :END:      
 
